fixed: the hipster hipster-image svg was not centered

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -153,10 +153,10 @@ body {
 .posting-tool-container {
 	top: 0px;
 	right: 0px;
-	width: 400px;
+	width: 300px;
 	height: 1900px;
-/*	background: red;
-*/	position: absolute;
+	background: red;
+	position: absolute;
 	z-index: +1;
 }
 
